--- a/content/post/2013-08-15-px-vs-em.md
+++ b/content/post/2013-08-15-px-vs-em.md
@@ -15,11 +15,11 @@ My `_responsive.scss` works this way. Because I think it's good to have large te
 
 One of the main reasons to use em instead of pixel is that this measurement unit doesn't depend on the screen size in Pixel while the pixel unit does. An button that has the markup you see below will look the same on any device at any scale - it is fully responsive in other words.
 
-{{< highlight css >}}
+```css 
 .button {
 	padding:.5em .7em;
 }
-{{< / highlight >}}
+```
 
 Another important point is that em Media Queries apply even if the user zooms the page. Go ahead an try to zoom this blog, at some point the responsive layout (breakpoint 55em) will apply - if you use pixel in your breakpoint (for example `@media all and (max-width:800px)`) it will not apply the responsive layout when someone zooms in.
 
