--- a/content/post/2013-10-14-i-js.md
+++ b/content/post/2013-10-14-i-js.md
@@ -11,19 +11,19 @@ Today I decided to dig deeper into JavaScript and experiment a bit with scope, q
 After naming my Object $ (because I new this from jQuery and I thought it would look cool) I renamed it to `I` and here comes the fun part: While learning JS I build i.js - a tiny JS "Framework" that enables you to write JS nearly the same you'd speak.
 For example you may thing: *"I want to get the Object with the class name test"* - to get this, simply write the following:
 
-{{< highlight javascript >}}
+```javascript 
 I.WantA.classname("test");
-{{< / highlight >}}
+```
 
 This will return you the element that has the class `test`. Not so cool? Well, let's bring Events to the game!
 
-{{< highlight javascript >}}
+```javascript 
 // Spoken: "I want to add an Event that when you click on the 
 // element with the ID js-removeClass a FUNCTION triggers"
 I.WantTo.addEvent("click", "js-removeClass",function(){
 	I.WantTo.removeClass("output","lorem");
 });
-{{< / highlight >}}
+```
 
 The above script does the following:
 
@@ -33,7 +33,7 @@ The above script does the following:
 You can find a working Demo on [CodePen](http://codepen.io/kevingimbel/pen/sgCae) or [directly on my site](http://kevingimbel.com/i.js/demo/). If you want to contribute more functions I'd be very happy!
 
 Beside of this useless but fun Framework I also wrote a kinda useful function: `_match()`. `_match()` takes any value and checks if it's a ID, a class or an Tag Name. When it matches one of these it returns the correct element. 
-{{< highlight javascript >}}
+```javascript 
 var _match = function(el) {
     a = document.querySelector("."+el);
     b = document.getElementById(el);
@@ -48,4 +48,4 @@ var _match = function(el) {
         return c[0];
     }
 };
-{{< / highlight >}}
+```
