--- a/content/post/2014-01-02-webdev-in-2014.md
+++ b/content/post/2014-01-02-webdev-in-2014.md
@@ -24,7 +24,7 @@ There are even more reasons to drop m-dot domains but I think those should make 
 
 So, the key of a good, flexible design is the CSS and the breakpoints. I prefer to create them in em instead of pixel or - even worse - exact screen sizes to target different devices. If you keep your head out of the iOS world you'll find hundreds of different screen sizes, would you target them all with exact pixels? I guess you wouldn't want to and wouldn't do it. So what else can we do? Support just a few devices, let's say a min-width of 600px? No. We'll use em instead and build a responsive site with 3 to 4 breakpoints like so:
 
-{{< highlight css >}}
+```css 
 @media all and (min-width: 80em) {
     /* large screens */
 }
@@ -40,7 +40,7 @@ So, the key of a good, flexible design is the CSS and the breakpoints. I prefer 
 @media all and (max-width: 30em) {
     /* small devices like smartphones */
 }
-{{< / highlight >}}
+```
 
 I once created a page that only [shows the current breakpoint](http://dev.kevingimbel.me/breakpoint/) and based on this I found that the above breakpoints are safe to use. However, just knowing the breakpoints isn't the goal. Next it comes to markup and grids while I'll use a early beta of Bullgrid, a Grid System I'm working on with [Tim Pietrusky](http://twitter.com/timpietrusky) at the moment. It's based on [inuit CSS Grids](http://inuitcss.com/2012/12/building-grid-systems-with-inuit-css/) but moved into one file and re-written to use [em instead of px](/em-vs-px).
 
@@ -54,7 +54,7 @@ When you open the pen in [fullscreen view](http://codepen.io/kevingimbel/full/im
 
 This all works with a Grid I'll talk about next and the way the markup is written.
 
-{{< highlight html >}}
+```html 
 <!-- Wrapping the Grid inside the gw class -->
 <div class="wrapper gw">
     <header class="g one-whole  small-one-whole">
@@ -79,7 +79,7 @@ This all works with a Grid I'll talk about next and the way the markup is writte
         <!-- Again, one-whole = all available width -->
     </footer>
 </div>
-{{< / highlight >}}
+```
 
 You may wonder what this `small-one-whole` thing does? I'll cover that next!
 
@@ -87,7 +87,7 @@ You may wonder what this `small-one-whole` thing does? I'll cover that next!
 
 As mentioned above I'm using an early beta of Bullgrid. However, the best thing about this grid is that it is re-usable, easy to understand and you can see the behavior of elements inside the markup. Here's an example.
 
-{{< highlight html >}}
+```html 
 <article class="g one-third  medium-one-half  small-one-whole">
     <!-- Article 1 -->
 </article>
@@ -99,7 +99,7 @@ As mentioned above I'm using an early beta of Bullgrid. However, the best thing 
 <article class="g one-third  medium-one-half  small-one-whole">
     <!-- Article 3 -->
 </article>
-{{< / highlight >}}
+```
 
 So the above results in something similar to this.
 
@@ -110,7 +110,7 @@ As you can see the article's width is always adjusted to the width of the screen
 
 The hearth of this grid is the breakpoint mixin you can see below.
 
-{{< highlight scss >}}
+```scss 
 @mixin breakpoint($point) {
   @if $point == "large" {
     @media all and (min-width: 80em) {
@@ -130,11 +130,11 @@ The hearth of this grid is the breakpoint mixin you can see below.
     }
   }
 }
-{{< / highlight >}}
+```
 
 This mixin can be used like
 
-{{< highlight scss >}}
+```scss 
     .my-class {
         width: 50%;
 
@@ -142,11 +142,11 @@ This mixin can be used like
             width:100%;
         }
     }
-{{< / highlight >}}
+```
 
 So when the breakpoint small is triggered `my-class` will have a width of 100% instead of 50%. Quite a lot to write in case of the grid right? [Harry Roberts](http://csswizardry.com/) has a handy `grid-setup()` SCSS function that we re-used for bullgrid. It looks as followed.
 
-{{< highlight scss >}}
+```scss 
 @mixin grid-setup($namespace: "") {
 
   /*
@@ -206,11 +206,11 @@ So when the breakpoint small is triggered `my-class` will have a width of 100% i
     width: 91.666%;
   }
 }
-{{< / highlight >}}
+```
 
 To set up the `small-`, `medium-` and `large-` grid we use `grid-setup` combined with `breakpoint`.
 
-{{< highlight scss >}}
+```scss 
 @include breakpoint(large){
   @include grid-setup("large-");
 }
@@ -222,7 +222,7 @@ To set up the `small-`, `medium-` and `large-` grid we use `grid-setup` combined
 @include breakpoint(small){
   @include grid-setup("small-");
 }
-{{< / highlight >}}
+```
 
 Once the grid is setup we can use all the different combinations and prefix them with `large-`,`meduim-` or `small-`. Basically that's it what I want to say about responsive development to this point. I think it is important to stop thinking in different categories like "mobile", "desktop", "TV" or whatever - it's more important to see a bunch of screens and devices that have a specific width you need to target with your breakpoints. Also I think every website you create this year should be responsive. There's no excuse anymore to do a non-responsive website. It should be a standard. So as a developer in a design team you should talk to your designers to keep responsive design in mind when making screen-designs. The Internet has become a canvas with a lot of sizes and we, as the artist, have to re-think the way we paint on it.
 
