Correct image links to https source

--- a/content/post/2014-01-02-webdev-in-2014.md
+++ b/content/post/2014-01-02-webdev-in-2014.md
@@ -20,7 +20,7 @@ Some people may tell you that m.domain.tld is a great thing but it is not. Actua
 - when the windows gets resized your page doesn't fit the new viewport
 
 There are even more reasons to drop m-dot domains but I think those should make it clear. Another downside to "smartphone"-only optimization is the last point on the list: The resizing. I really like to re-size a page to half it's size on desktop so that I can, for example, follow a guide and do stuff inside my editor without switching between the windows all the time. This screenshot of [spiegel.de](http://spiegel.de) shows the downside of "mobile-only" responsive design.
-![Screenshot of Spiegel Online, left the desktop version half it's size, right the mobile version](http://i.kevingimbel.me/sc/screenshot-16-46.png "Screenshot of Spiegel Online, left the desktop version half it's size, right the mobile version")
+![Screenshot of Spiegel Online, left the desktop version half it's size, right the mobile version](https://i.kevingimbel.me/sc/screenshot-16-46.png "Screenshot of Spiegel Online, left the desktop version half it's size, right the mobile version")
 
 So, the key of a good, flexible design is the CSS and the breakpoints. I prefer to create them in em instead of pixel or - even worse - exact screen sizes to target different devices. If you keep your head out of the iOS world you'll find hundreds of different screen sizes, would you target them all with exact pixels? I guess you wouldn't want to and wouldn't do it. So what else can we do? Support just a few devices, let's say a min-width of 600px? No. We'll use em instead and build a responsive site with 3 to 4 breakpoints like so:
 
