[HK] Adjust highlight languages

--- a/content/post/2014-01-02-webdev-in-2014.md
+++ b/content/post/2014-01-02-webdev-in-2014.md
@@ -110,7 +110,7 @@ As you can see the article's width is always adjusted to the width of the screen
 
 The hearth of this grid is the breakpoint mixin you can see below.
 
-```scss 
+```css 
 @mixin breakpoint($point) {
   @if $point == "large" {
     @media all and (min-width: 80em) {
@@ -134,7 +134,7 @@ The hearth of this grid is the breakpoint mixin you can see below.
 
 This mixin can be used like
 
-```scss 
+```css 
     .my-class {
         width: 50%;
 
@@ -146,7 +146,7 @@ This mixin can be used like
 
 So when the breakpoint small is triggered `my-class` will have a width of 100% instead of 50%. Quite a lot to write in case of the grid right? [Harry Roberts](http://csswizardry.com/) has a handy `grid-setup()` SCSS function that we re-used for bullgrid. It looks as followed.
 
-```scss 
+```css 
 @mixin grid-setup($namespace: "") {
 
   /*
@@ -210,7 +210,7 @@ So when the breakpoint small is triggered `my-class` will have a width of 100% i
 
 To set up the `small-`, `medium-` and `large-` grid we use `grid-setup` combined with `breakpoint`.
 
-```scss 
+```css 
 @include breakpoint(large){
   @include grid-setup("large-");
 }
