New Icons; Various adjustments in word and style

--- a/content/post/2013-08-15-px-vs-em.md
+++ b/content/post/2013-08-15-px-vs-em.md
@@ -15,7 +15,7 @@ My `_responsive.scss` works this way. Because I think it's good to have large te
 
 One of the main reasons to use em instead of pixel is that this measurement unit doesn't depend on the screen size in Pixel while the pixel unit does. An button that has the markup you see below will look the same on any device at any scale - it is fully responsive in other words.
 
-```css 
+```css
 .button {
 	padding:.5em .7em;
 }
@@ -30,7 +30,8 @@ So if you create a new responsive website, and you should always do so, do your 
 ### Further Reading
 
 More articles on this topic:
-- [Sizing (Web) components](https://medium.com/front-end-development/8f433689736f) by [Simurai](http://simurai.com/)
-- [Font-size with rem ](http://snook.ca/archives/html_and_css/font-size-with-rem) by [Jonathan Snook](http://snook.ca)
-- [The ems have it: Proportional Media Queries FTW](http://blog.cloudfour.com/the-ems-have-it-proportional-media-queries-ftw/) by [Lyza Gardner](http://blog.cloudfour.com/author/lyza-gardner/)
-- [em vs px](http://codepen.io/LukyVj/blog/em-vs-px) by [Lucas Bonomi](http://lucasbonomi.com/)
+
+* [Sizing (Web) components](https://medium.com/front-end-development/8f433689736f) by [Simurai](http://simurai.com/)
+* [Font-size with rem ](http://snook.ca/archives/html_and_css/font-size-with-rem) by [Jonathan Snook](http://snook.ca)
+* [The ems have it: Proportional Media Queries FTW](http://blog.cloudfour.com/the-ems-have-it-proportional-media-queries-ftw/) by [Lyza Gardner](http://blog.cloudfour.com/author/lyza-gardner/)
+* [em vs px](http://codepen.io/LukyVj/blog/em-vs-px) by [Lucas Bonomi](http://lucasbonomi.com/)
