Spelling correction: 'Class' => 'class'

--- a/content/post/2017-11-26-a-new-look.md
+++ b/content/post/2017-11-26-a-new-look.md
@@ -55,13 +55,13 @@ With CSS variables we need to retrieve the value by calling a `var` function. Th
 
 `.my-selector` will have a color value equal to whatever is stored inside the `--color` variable or `#333` if it is not set.
 
-A variable can later be changed to be "locally scoped". For this example we define a custom property named `--color` and set its value to `red`. We say all h1 elements should use the `--color` variable for their font-color. Then we create a CSS Class named `local-scope` and inside we change the `--color` to `blue`. A `h1` element inside the `local-scope` will use the re-defined color value.
+A variable can later be changed to be "locally scoped". For this example we define a custom property named `--color` and set its value to `red`. We say all h1 elements should use the `--color` variable for their font-color. Then we create a CSS class named `local-scope` and inside we change the `--color` to `blue`. A `h1` element inside the `local-scope` will use the re-defined color value.
 
 {{% codepen slug="78d261a36ecded2b75d5260cb7056fce" title="CSS Variables - Cascading & local scope" %}}
 
 We do not need to change the `h1` selector because `h1` will always have a font-color equal to `--color` - we only need to change the variable inside the local scope. The third `h1` element is outside the local scope and so it takes the  original `--color` value (red).
 
-This type of inheritance is a powerful tool CSS has given us ("us" being developers). At runtime, when the website is loaded and all CSS is parsed and the website has been painted to the screen, we can still change these properties on-the-fly with JavaScript and the browser will simply re-render the parts that need changing. Of course, you can already change CSS on the go with JavaScript. You could select for example a bunch of elements by Class name and then change their color to be `blue` instead of red. With CSS Custom Properties you don't need to do this! All we need to do is change the variable at a higher level, for example on the `body` element as the following example illustrates.
+This type of inheritance is a powerful tool CSS has given us ("us" being developers). At runtime, when the website is loaded and all CSS is parsed and the website has been painted to the screen, we can still change these properties on-the-fly with JavaScript and the browser will simply re-render the parts that need changing. Of course, you can already change CSS on the go with JavaScript. You could select for example a bunch of elements by class name and then change their color to be `blue` instead of red. With CSS Custom Properties you don't need to do this! All we need to do is change the variable at a higher level, for example on the `body` element as the following example illustrates.
 
 {{% codepen slug="5245628703a6a223215cf5a30cf8294d" title="CSS Variables - Changing with JS" %}}
 
