Partly redesign; New Post

--- a/content/post/2017-04-02-2017-week-10-11-12-13.md
+++ b/content/post/2017-04-02-2017-week-10-11-12-13.md
@@ -25,7 +25,7 @@ Some time ago I bought the domain [thelink.club](http://thelink.club) - it's cur
 
 It's a great way to get into Go / Microservice programming with Go and I already learned quite a lot about using the http package in Go. I enjoy working with Go; It's challenging and new to me. Coming from languages like JavaScript and PHP I enjoy the strictness and the good compiler - and compiler errors - while developing. I might write down a bit of what I learned along the way as a new Go user and what was challenging coming from JavaScript or PHP.
 
-### Völkerball
+## Völkerball
 
 {{% figure src="/images/posts/2017/weeks-march/volkerball-fog-show.jpg" caption="What looks like a burning person is actually just fog. 😐" %}}
 
